Make a working index page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-<div class="donut" id="level1">
-  <div class="hole">
-    <div class="label">normal</div>
+<html>
+<head>
+  <title>Emotion Wheel</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+  <div class="donut" id="level1">
+    <div class="hole">
+      <div class="label">normal</div>
+    </div>
+    <div class="labels"></div>
   </div>
-  <div class="labels"></div>
-</div>
-<div class="donut" id="level2">
-  <div class="labels"></div>
-</div>
-<div class="donut" id="level3">
-  <div class="labels"></div>
-</div>
+  <div class="donut" id="level2">
+    <div class="labels"></div>
+  </div>
+  <div class="donut" id="level3">
+    <div class="labels"></div>
+  </div>
+  <script src="index.js" type="text/javascript" charset="utf-8" async defer></script>
+</body>
+</html>
